fix errors from linter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,8 +36,8 @@
             2
         ],
         "linebreak-style": [
-            "warn",
-            "windows"
+            "off",
+            "unix"
         ],
         "quotes": [
             "error",
