--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/epicodus-lessons/react-help-queue-example#readme",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.0.0",
+    "react": "^16.9",
+    "react-dom": "^16.9",
+    "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.1",
     "styled-jsx": "^3.2.2",
     "uuid": "^3.2.1"
   },
@@ -32,9 +34,10 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.2.0",
     "eslint": "^4.13.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-react": "^7.14.3",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.29.0",
     "react-hot-loader": "next",
