--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -42,6 +43,7 @@
     "eslint-plugin-react": "^7.14.3",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.29.0",
+    "jest": "^20.0.4",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^1.0.0",
     "url-loader": "^0.6.2",
