--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src/** src/**/**; exit 0",
     "lint-fix": "eslint src/** src/**/** --fix; exit 0",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest; exit 0",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "react-dom": "^16.9",
     "react-router-dom": "^5.0.1",
     "react-search-field": "^1.0.0",
+    "redux": "^3.7.2",
     "styled-jsx": "^3.2.2",
     "uuid": "^3.2.1"
   },
