--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9",
     "react-dom": "^16.9",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^5.0.1",
     "react-search-field": "^1.0.0",
     "redux": "^3.7.2",
